# Homework

./: .gitignore  Homework.workspace  Lab_2.project  Makefile  Самостійна робота 7.docx
.codelite/: Homework.session  compilation.db  compile_commands.json  refactoring.db
4-37/: 4-37.project  Array4-37.mk
Array116-130/: Array116-130.mk  Array116-130.project  Array116-130.txt  Assignment  CMakeLists.txt  array116.cpp  array120.cpp  array124.cpp  array125.cpp  array128.cpp  main_menu.cpp  vectorlib.h
Array116-130/Debug/: array116.cpp.o.d  array120.cpp.o.d  array124.cpp.o.d  array125.cpp.o.d  array128.cpp.o.d  main_menu.cpp.o.d
Array69-111/: Array108.cpp  Array69-111.mk  Array69-111.project  Array69-111.txt  Array73.cpp  Array78.cpp  Array82-83.cpp  Array82.cpp  Array83.cpp  Array87.cpp  Array96.cpp
Array_Insane_Session/: 12.cpp  16.cpp  2.cpp  26.cpp  4.cpp  6.cpp  Array_Insane_Session.mk  Array_Insane_Session.project  Array_Insane_Session.txt  compiling_error.txt
Collection/: Collection.project
LR4/: CMakeLists.txt  LR4.mk  LR4.project  LR4.txt  lr4.cpp  lr4.h
Lab_2/: ATM.cpp  ATM.h  Lab_2.project
Lab_map_c/: Lab_map_c.project
Laba1/: Lab1  Lab1_main.cpp  Lab1_quicksort.cpp  Laba1.mk  Laba1.project  Laba1.txt  function.cpp  quickSort.cpp
Laba2/: Laba2.mk  Laba2.project  Laba2.txt  main.cpp  new.cpp
Matrix22-38/: main.cpp  matrix30.cpp  matrix4.cpp  matrixhw  matrixlib.h
Matrix4-38/: Matrix4-38.mk  Matrix4-38.project  Matrix4-38.txt  compiling_error.txt  main.cpp  matrix14.cpp  matrix16.cpp  matrix30.cpp  matrix35.cpp  matrix36.cpp  matrix79_old.cpp  (+3 more)
(+357 files in other folders)
